--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="title_activity_students">StudentsActivity</string>
     <string name="charge_courses">Carga Horaria: </string>
     <string name="hours_courses"> Horas</string>
+    <string name="title_students">Nossos Alunos:</string>
 
 
 
