--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="button_start_school">Comece a estudar!</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="input_search_label">Pesquisar por Curso...</string>
+    <string name="input_search_label_student">Pesquisar por Aluno...</string>
     <string name="home_welcome">Bem vindo!</string>
     <string name="home_description">Essa é a area home, aproveite e veja sobre nosso cursos.</string>
     <string name="home_courses">Cursos</string>
@@ -16,7 +17,7 @@
     <string name="charge_courses">Carga Horaria: </string>
     <string name="hours_courses"> Horas</string>
     <string name="title_students">Nossos Alunos:</string>
-
+    <string name="title_activity_student">StudentActivity</string>
 
 
 </resources>
